<resources>
    <string name="app_name">Team Tasks</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="logIn">Log in</string>
    <string name="requiredField">This field is required</string>
    <string name="wrongEmail">Wrong email</string>
    <string name="wrongData">Input data is incorrect</string>
    <string name="loggingIn">Logging in</string>
    <string name="title_activity_main">Team tasks</string>

    <string name="logOutMessage">Bye bye</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Left menu items -->
    <string name="home">Home</string>
    <string name="teams">Teams</string>
    <string name="activityLog">Activity log</string>
    <string name="about">About</string>
    <string name="logOut">Log out</string>

    <string name="members">Members</string>
    <string name="goals">Goals</string>

    <string name="action_settings">Settings</string>

    <string name="aboutContent">We are students of the Ciudad Valles Technological Institute.</string>
    <string name="contact">Contact</string>
    <string name="contactContent">contact.teamtasks@gmail.com</string>
    <string name="sourceCode">Source Code</string>
    <string name="sourceCodeContent">Yes, it is open source and licensed under the GPLv3. Find it <a href="http://somesite.com/">Here</a></string>
</resources>
