<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/navTeams"
            android:icon="@drawable/ic_menu_teams"
            android:title="@string/teams" />
        <item
            android:id="@+id/navActivityLog"
            android:icon="@drawable/ic_menu_activity_log"
            android:title="@string/activityLog" />
        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />

        <item
            android:id="@+id/navLogOut"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/logOut" />
    </group>
</menu>
